fix: firefox z-index

--- a/pizza-builder/src/App.sass
+++ b/pizza-builder/src/App.sass
@@ -9,6 +9,7 @@
 
 .pizza_building
   position: relative
+  z-index: -1
   flex-grow: 10
   overflow: visible
   @media(orientation: portrait)
